--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="imagefoto.png" alt="Fajar Pratama" class="profile-img">
+                    <img src="imagefoto.png" alt="Raden Muhammmad Zehan Fadillah" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Fajar Pratama</h3>
+                <h3 class="member-name">Raden Muhammmad Zehan Fadillah</h3>
                 <p class="member-nim">NIM: 2210005</p>
                 <span class="member-role">Content Creator</span>
                 <p class="member-intro">Words are my superpower! Crafting content that connects and converts. Making
