edit member 5 hobby,nim, dan pp

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="imagefoto.png" alt="Raden Muhammmad Zehan Fadillah" class="profile-img">
+                    <img src="Zehan foto.jpeg" alt="Raden Muhammmad Zehan Fadillah" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
                 <h3 class="member-name">Raden Muhammmad Zehan Fadillah</h3>
-                <p class="member-nim">NIM: 2210005</p>
+                <p class="member-nim">NIM: 251524061</p>
                 <span class="member-role">Content Creator</span>
                 <p class="member-intro">Words are my superpower! Crafting content that connects and converts. Making
                     complex things simple and boring things fun 🎬</p>
                 <div class="hobby-section">
                     <span class="hobby-icon">✈️</span>
-                    <span class="hobby-text">Hobby: <span>Traveling & Vlogging</span></span>
+                    <span class="hobby-text">Hobby: <span>Swimming & Singing</span></span>
                 </div>
             </div>
 
