Benerin data diri

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="bg-pattern"></div>
@@ -56,16 +56,16 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="https://ui-avatars.com/api/?name=Budi+Santoso&background=random&color=fff&size=128" alt="Budi Santoso" class="profile-img">
+                    <img src="IMG_8924.JPG" alt="Budi Santoso" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Budi Santoso</h3>
-                <p class="member-nim">NIM: 2210003</p>
-                <span class="member-role">Frontend Dev</span>
-                <p class="member-intro">Turning designs into interactive experiences! Obsessed with clean code and smooth animations. CSS is my love language.</p>
+                <h3 class="member-name">Arya Nata Adidjaya</h3>
+                <p class="member-nim">NIM: 251524039</p>
+                <span class="member-role"> Regular Member </span>
+                <p class="member-intro"> Turning designs into interactive experiences! Obsessed with clean code and smooth animations. </p>
                 <div class="hobby-section">
-                    <span class="hobby-icon"> 🎵 </span>
-                    <span class="hobby-text">Hobby: <span>Music Production</span></span>
+                    <span class="hobby-icon"> 🎵  </span>
+                    <span class="hobby-text">Hobby: <span>Listen to music and reading</span></span>
                 </div>
             </div>
 
