Masukkan file foto, ganti nama, nim, dan hobi

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="https://ui-avatars.com/api/?name=Fajar+Pratama&background=random&color=fff&size=128" alt="Fajar Pratama" class="profile-img">
+                    <img src="Zehan foto.jpeg" alt="Raden Muhammad Zehan Fadillah" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Fajar Pratama</h3>
-                <p class="member-nim">NIM: 2210005</p>
+                <h3 class="member-name">Raden Muhammad Zehan Fadillah</h3>
+                <p class="member-nim">NIM: 251524061</p>
                 <span class="member-role">Content Creator</span>
                 <p class="member-intro">Words are my superpower! Crafting content that connects and converts. Making complex things simple and boring things fun.</p>
                 <div class="hobby-section">
-                    <span class="hobby-icon"> ✈️ </span>
-                    <span class="hobby-text">Hobby: <span>Traveling & Vlogging</span></span>
+                    <span class="hobby-icon"> 🏊 </span>
+                    <span class="hobby-text">Hobby: <span>swimming & singing</span></span>
                 </div>
             </div>
 
