--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                     <img src="https://ui-avatars.com/api/?name=Gita+Maharani&background=random&color=fff&size=128" alt="Gita Maharani" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Gita Maharani</h3>
-                <p class="member-nim">NIM: 2210006</p>
+                <h3 class="member-name">Alpedro Simanjorang</h3>
+                <p class="member-nim">NIM: 251524037</p>
                 <span class="member-role">QA Tester</span>
                 <p class="member-intro">Finding bugs before they find you! Quality is not just a goal, it's the standard. No bug escapes my radar.</p>
                 <div class="hobby-section">
-                    <span class="hobby-icon"> 🎬 </span>
-                    <span class="hobby-text">Hobby: <span>Netflix & Cooking</span></span>
+                    <span class="hobby-icon"> 🎮 </span>
+                    <span class="hobby-text">Hobby: <span>Gaming & Music</span></span>
                 </div>
             </div>
         </div>
