--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="https://ui-avatars.com/api/?name=Gita+Maharani&background=random&color=fff&size=128" alt="Gita Maharani" class="profile-img">
+                    <img src="Screenshot 2026-01-23 193911.png" alt="Alpedro Simanjorang" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
                 <h3 class="member-name">Alpedro Simanjorang</h3>
