benerin data shahnaz

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="https://ui-avatars.com/api/?name=Dewi+Anggraini&background=random&color=fff&size=128" alt="Dewi Anggraini" class="profile-img">
+                    <img src="avatar.jpg">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Dewi Anggraini</h3>
-                <p class="member-nim">NIM: 2210004</p>
+                <h3 class="member-name">Shahnaz Saskia Putri</h3>
+                <p class="member-nim">NIM: 251524062</p>
                 <span class="member-role">Backend Dev</span>
-                <p class="member-intro">The wizard behind the scenes! Building robust systems that just work. Always debugging with coffee in hand.</p>
+                <p class="member-intro">I turn someday into done.</p>
                 <div class="hobby-section">
-                    <span class="hobby-icon"> 📚 </span>
-                    <span class="hobby-text">Hobby: <span>Reading & Hiking</span></span>
+                    <span class="hobby-icon"> 🎶 </span>
+                    <span class="hobby-text">Hobby: <span>Listening to music</span></span>
                 </div>
             </div>
 
