Benerin data Hilman

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <img src="https://ui-avatars.com/api/?name=Ahmad+Rizky&background=random&color=fff&size=128" alt="Ahmad Rizky" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
-                <h3 class="member-name">Ahmad Rizky</h3>
-                <p class="member-nim">NIM: 2210001</p>
+                <h3 class="member-name">HIlman Alfarisi Kurniadi</h3>
+                <p class="member-nim">NIM: 251524052</p>
                 <span class="member-role">Project Lead</span>
                 <p class="member-intro">The mastermind who keeps everything on track. Passionate about tech and turning ideas into reality! Always ready to take on new challenges.</p>
                 <div class="hobby-section">
