--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="member-card">
                 <div class="profile-wrapper">
                     <div class="profile-ring"></div>
-                    <img src="avatar.jpg">
+                    <img src="avatar.jpg" alt="shahnaz" class="profile-img">
                     <div class="status-dot"></div>
                 </div>
                 <h3 class="member-name">Shahnaz Saskia Putri</h3>
